--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@
 
 vpath %.c ..
 
-CFLAGS := -std=c11 -D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=500 -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I.. -g3
+CFLAGS := -std=c11 -D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=500 -Wall -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I.. -g3
 ifneq ($(USER),travis)
 # On Travis-CI, gcc does not support "undefined" and "leak" sanitizers.
 # Furthermore (and worse, actually), there seems to be a kernel < 4.12.8
