--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,13 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-libssh:
+    runs-on: ubuntu-latest
+    steps:
+      - run: git clone https://git.libssh.org/projects/libssh.git libssh
 
+  build:
+    needs: build-libssh
     runs-on: ubuntu-latest
 
     steps:
