--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,12 @@ jobs:
   build-libssh:
     runs-on: ubuntu-latest
     steps:
-      - run: git clone --depth 1 --branch libssh-0.9.5 https://git.libssh.org/projects/libssh.git libssh
-      - run: mkdir libssh-build
-      - run: cd libssh-build
-      - run: cmake ../libssh
-      - run: sudo make install
+      - run: |
+        git clone --depth 1 --branch libssh-0.9.5 https://git.libssh.org/projects/libssh.git libssh
+        mkdir libssh-build
+        cd libssh-build
+        cmake ../libssh
+        sudo make install
 
   build:
     needs: build-libssh
