--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,8 @@
-.PHONY: all test
+.PHONY: all tests
 
 vpath %.c ..
 
-CFLAGS := -std=c11 -D_POSIX_C_SOURCE=200112L -D_XOPEN_SOURCE=500 -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I.. -g3
+CFLAGS := -std=c11 -D_POSIX_C_SOURCE=200809L -D_XOPEN_SOURCE=500 -D_DEFAULT_SOURCE -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I.. -g3
 CFLAGS += -pie -fPIE -fsanitize=address -fsanitize=undefined -fsanitize=leak
 LDFLAGS :=
 
@@ -16,12 +16,12 @@ all: $(TEST_COMMON_OBJS) $(TEST_OBJS)
 
 test_stringlist: $(TEST_COMMON_OBJS) test_stringlist_entry.o stringlist.o
 test_strings: $(TEST_COMMON_OBJS) test_strings_entry.o strings.o
-test_vfs: $(TEST_COMMON_OBJS) test_vfs_entry.o vfs.o vfsdebug.o strings.o
+test_vfs: $(TEST_COMMON_OBJS) test_vfs_entry.o vfs.o vfsdebug.o strings.o logging.o
 
 %_entry.c: %.c
 	./generate_entry $< $@
 
-test: all
+tests: all
 	for testname in $(TEST_OBJS); do ./$$testname; done
 
 clean:
