--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@
 
 vpath %.c ..
 
-CFLAGS := -std=c11 -D_POSIX_C_SOURCE=200809L -D_XOPEN_SOURCE=500 -D_DEFAULT_SOURCE -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -O3 -I.. -g3
+CFLAGS := -std=c11 -D_POSIX_C_SOURCE=200809L -D_XOPEN_SOURCE=500 -D_DEFAULT_SOURCE -Wall -Werror -Wmissing-prototypes -Wstrict-prototypes -Werror=implicit-function-declaration -Wno-stringop-truncation -O3 -I.. -g3
 CFLAGS += -pie -fPIE -fsanitize=address -fsanitize=undefined -fsanitize=leak
 LDFLAGS :=
 
@@ -16,7 +16,7 @@ all: $(TEST_COMMON_OBJS) $(TEST_OBJS)
 
 test_stringlist: $(TEST_COMMON_OBJS) test_stringlist_entry.o stringlist.o
 test_strings: $(TEST_COMMON_OBJS) test_strings_entry.o strings.o
-test_vfs: $(TEST_COMMON_OBJS) test_vfs_entry.o vfs.o vfsdebug.o strings.o logging.o
+test_vfs: $(TEST_COMMON_OBJS) test_vfs_entry.o vfs.o vfsdebug.o strings.o logging.o stringlist.o
 
 %_entry.c: %.c
 	./generate_entry $< $@
